ksmserver/server.cpp
@@ -620,6 +620,13 @@ KSMServer::KSMServer(InitFlags flags)
     connect(qApp, &QApplication::aboutToQuit, this, &KSMServer::cleanUp);
 
     setupXIOErrorHandler();
+
+    QDBusMessage ksplashProgressMessage = QDBusMessage::createMethodCall(QStringLiteral("org.kde.KSplash"),
+                                                                         QStringLiteral("/KSplash"),
+                                                                         QStringLiteral("org.kde.KSplash"),
+                                                                         QStringLiteral("setStage"));
+    ksplashProgressMessage.setArguments({QStringLiteral("ksmserver")});
+    QDBusConnection::sessionBus().call(ksplashProgressMessage, QDBus::NoBlock);
 }
 
 KSMServer::~KSMServer()
